@@ -7858,4 +7858,8 @@ EPRINTS-3.1-beta-2
 
 2008-11-11 tdb
  * Correctly escape search export URLs (lac request)
+ * Use a repository-specific session cookie
+
+2008-11-12 tdb
+ * Added dc:date to UKETD export
 
